# regex-derivatives

./: .gitignore  LICENSE  Main.hs  Parse.hs  README.md  Regex.hs  hspec-tests.sh  regex-derivatives.cabal
test/: ParseSpec.hs  RegexSpec.hs
