name:                regex-derivatives
version:             0.0.1
description:         Regex matcher that uses derivatives instead of finite automata.
license:             BSD2
license-file:        LICENSE
author:              Devin Nusbaum
maintainer:          d.w.nusbaum@gmail.com
build-Type:          Simple
cabal-Version:       >=1.8

library
  exposed-modules:   Regex, Parse
  build-depends:     base, mtl, parsec

executable regex
  Main-is:           Main.hs
  build-depends:     base, parsec
  ghc-options:       -Wall -O

Test-Suite spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  ghc-options:       -Wall
  build-depends:     base, hspec, regex-derivatives, QuickCheck
